--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:server": "tsc server/standalone.ts server/expressRouter.ts --outDir dist-server --module es2022 --moduleResolution node --esModuleInterop --skipLibCheck",
+    "start:server": "node dist-server/standalone.js",
+    "server": "tsx server/standalone.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -53,11 +56,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.6",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.3.0",
+    "express": "^4.22.1",
     "firebase": "^12.10.0",
     "firebase-admin": "^13.7.0",
     "framer-motion": "^12.7.4",
+    "groq-sdk": "^0.3.3",
     "gsap": "^3.14.2",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.4",
@@ -83,6 +90,8 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -95,6 +104,7 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "tsx": "^4.21.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
